@@ -2,15 +2,17 @@ package io.upschool.service;
 
 import io.upschool.dto.airlinecompany.AirlineCompanyRequest;
 import io.upschool.dto.airlinecompany.AirlineCompanyResponse;
+import io.upschool.dto.airlinecompany.AirlineCompanySearchRequest;
 import io.upschool.entity.AirlineCompany;
 import io.upschool.exception.AirlineCompanyAlreadySavedException;
 import io.upschool.repository.AirlineCompanyRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Example;
+import org.springframework.data.domain.ExampleMatcher;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,26 +20,21 @@ public class AirlineCompanyService {
     private final AirlineCompanyRepository airlineCompanyRepository;
 
     public List<AirlineCompanyResponse> getAllAirlineCompanies() {
-
         return airlineCompanyRepository.findAll().stream().map(airlineCompany ->
-                AirlineCompanyResponse.builder()
-                        .id(airlineCompany.getId())
-                        .name(airlineCompany.getName())
-                        .iataCode(airlineCompany.getIataCode())
-                        .build()).collect(Collectors.toList());
+                entityToResponse(airlineCompany)).toList();
     }
 
     @Transactional
     public AirlineCompanyResponse save(AirlineCompanyRequest request) {
-
         checkIsAirlineCompanyAlreadySaved(request);
-        AirlineCompany airlineCompanyResponse = buildCreditCardAndSave(request);
 
-        return AirlineCompanyResponse.builder()
-                .id(airlineCompanyResponse.getId())
-                .name(airlineCompanyResponse.getName())
-                .iataCode(airlineCompanyResponse.getIataCode())
+        AirlineCompany airlineCompany = AirlineCompany.builder()
+                .name(request.getName())
+                .iataCode(request.getIataCode())
                 .build();
+        AirlineCompany savedAirlineCompany = airlineCompanyRepository.save(airlineCompany);
+
+        return entityToResponse(savedAirlineCompany);
     }
 
     @Transactional(readOnly = true)
@@ -45,13 +42,12 @@ public class AirlineCompanyService {
         return airlineCompanyRepository.getReferenceById(airlineCompanyId);
     }
 
-    private AirlineCompany buildCreditCardAndSave(AirlineCompanyRequest request) {
-
-        AirlineCompany airlineCompany = AirlineCompany.builder()
-                .name(request.getName())
-                .iataCode(request.getIataCode())
+    public AirlineCompanyResponse entityToResponse(AirlineCompany airlineCompany) {
+        return AirlineCompanyResponse.builder()
+                .id(airlineCompany.getId())
+                .name(airlineCompany.getName())
+                .iataCode(airlineCompany.getIataCode())
                 .build();
-        return airlineCompanyRepository.save(airlineCompany);
     }
 
     private void checkIsAirlineCompanyAlreadySaved(AirlineCompanyRequest request) {
@@ -59,5 +55,19 @@ public class AirlineCompanyService {
         if (airlineByName) {
             throw new AirlineCompanyAlreadySavedException("This airline company has already been registered");
         }
+    }
+
+    public List<AirlineCompanyResponse> search(AirlineCompanySearchRequest request) {
+        AirlineCompany airlineCompany = AirlineCompany.builder()
+                .name(request.getName())
+                .iataCode(request.getIataCode())
+                .build();
+
+        Example<AirlineCompany> airlineCompanyExample = Example.of(airlineCompany,
+                ExampleMatcher.matching().withIgnoreCase().withStringMatcher(ExampleMatcher.StringMatcher.CONTAINING));
+
+        List<AirlineCompany> airlineCompanies = airlineCompanyRepository.findAll(airlineCompanyExample);
+
+        return airlineCompanies.stream().map(ac -> entityToResponse(ac)).toList();
     }
 }
