@@ -2,15 +2,17 @@ package io.upschool.service;
 
 import io.upschool.dto.airport.AirportRequest;
 import io.upschool.dto.airport.AirportResponse;
+import io.upschool.dto.airport.AirportSearchRequest;
 import io.upschool.entity.Airport;
 import io.upschool.exception.AirportAlreadySavedException;
 import io.upschool.repository.AirportRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Example;
+import org.springframework.data.domain.ExampleMatcher;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,35 +21,12 @@ public class AirportService {
     private final CityService cityService;
 
     public List<AirportResponse> getAllAirports() {
-        return airportRepository.findAll().stream().map(airport -> AirportResponse.builder()
-                .id(airport.getId())
-                .name(airport.getName())
-                .iataCode(airport.getIataCode())
-                .cityName(airport.getCity().getName())
-                .build()).collect(Collectors.toList());
+        return airportRepository.findAll().stream().map(airport -> entityToResponse(airport)).toList();
     }
 
     @Transactional
     public AirportResponse save(AirportRequest request) {
-
         checkIsAirportAlreadySaved(request);
-        Airport airportResponse = buildAirportAndSave(request);
-
-        return AirportResponse
-                .builder()
-                .id(airportResponse.getId())
-                .name(airportResponse.getName())
-                .iataCode(airportResponse.getIataCode())
-                .cityName(airportResponse.getCity().getName())
-                .build();
-    }
-
-    @Transactional(readOnly = true)
-    public Airport getReferenceById(Long id) {
-        return airportRepository.getReferenceById(id);
-    }
-
-    private Airport buildAirportAndSave(AirportRequest request) {
 
         Airport airport = Airport
                 .builder()
@@ -55,7 +34,26 @@ public class AirportService {
                 .iataCode(request.getIataCode())
                 .city(cityService.getReferenceById(request.getCityId()))
                 .build();
-        return airportRepository.save(airport);
+
+        Airport savedAirport = airportRepository.save(airport);
+
+        return entityToResponse(savedAirport);
+
+    }
+
+    @Transactional(readOnly = true)
+    public Airport getReferenceById(Long id) {
+        return airportRepository.getReferenceById(id);
+    }
+
+    public AirportResponse entityToResponse(Airport airport) {
+        return AirportResponse
+                .builder()
+                .id(airport.getId())
+                .name(airport.getName())
+                .iataCode(airport.getIataCode())
+                .cityName(airport.getCity().getName())
+                .build();
     }
 
     private void checkIsAirportAlreadySaved(AirportRequest request) {
@@ -65,4 +63,16 @@ public class AirportService {
         }
     }
 
+    public List<AirportResponse> search(AirportSearchRequest request) {
+        Airport airport = Airport.builder()
+                .name(request.getName())
+                .iataCode(request.getIataCode())
+                .build();
+        Example<Airport> airportExample = Example.of(airport,
+                ExampleMatcher.matching().withIgnoreCase().withStringMatcher(ExampleMatcher.StringMatcher.CONTAINING));
+
+        List<Airport> airports = airportRepository.findAll(airportExample);
+
+        return airports.stream().map(ap -> entityToResponse(ap)).toList();
+    }
 }
